# r2d2-sqlite

./: Cargo.toml  README.md
src/: lib.rs
tests/: test.rs
