[package]
name = "r2d2_sqlite_pool"
version = "0.1.0"
authors = []
license = "MIT"
description = "SQLite and SQLCipher support for the r2d2 connection pool"
repository = "https://github.com/jerebtw/r2d2-sqlite"
documentation = "https://docs.rs/r2d2_sqlite_pool/"
keywords = ["sqlite", "r2d2", "pool"]
edition = "2021"

[lib]
name = "r2d2_sqlite_pool"
path = "src/lib.rs"
test = false

[[test]]
name = "test"
path = "tests/test.rs"

[dependencies]
r2d2 = "0"
nanoid = "0"

[dependencies.rusqlite]
version = "0"

[dev-dependencies]
tempfile = "3"

[dev-dependencies.rusqlite]
version = "0.29"
features = ["trace"]


[features]
bundled = [ "rusqlite/bundled" ]
bundled-sqlcipher = ["rusqlite/bundled-sqlcipher"]
